<resources>
    <string name="app_name">BlindCafe</string>
    <string name="app_launcher_name">Blind Cafe</string>
    <string name="app_name_title">Blind cafe</string>
    <string name="temp_error">에러</string>
    <string name="no_value">-</string>
    <string name="toast_check_internet">에러발생. 앱을 재실행 해주세요</string>
    <string name="zero_time">00:00</string>
    <string name="male">남자</string>
    <string name="female">여자</string>
    <string name="bisexual">상관없음</string>
    <string name="sex">성별</string>
    <string name="age">나이</string>
    <string name="age_hint">나이를 입력해주세요:)</string>
    <string name="toast_matching_wait">아직 매칭 상대를 찾고 있어요!</string>
    <string name="toast_gallery_limit">최대 5장까지 전송이 가능합니다.</string>
    <string name="toast_select_reason">사유를 먼저 선택해주세요</string>
    <string name="toast_fail">요청에 실패했습니다</string>
    <string name="interest">관심사</string>
    <string name="toast_topic_exhaust">준비된 토픽이 다 소진되었습니다.</string>
    <string name="toast_upload_image">사진 업로드 중…</string>
    <string name="toast_upload_image_complete">사진 업로드 완료</string>
    <string name="toast_delete_image">사진 삭제 중…</string>
    <string name="toast_delete_image_complete">사진 삭제 완료</string>
    <string name="toast_input_reason">이유를 한 가지 선택해주세요</string>
    <string name="toast_already_post_matching_request">이미 매칭 요청중입니다. 매칭을 기다려주세요!</string>
    <string name="toast_gone">상대 계정이 더이상 유효하지 않습니다.</string>
    <string name="toast_not_appropriate_message">지원하지 않는 메시지 형식</string>
    <string name="rule_title">블라인드 카페 규칙</string>
    <string name="rule_skip">Skip</string>
    <string name="rule_next">다음</string>
    <string name="rule_1">[3일간의 대화]로 설렘을 느껴보세요. 언제든지 새로운 상대와 대화를 시작할 수 있습니다.\n단, [한 번에 한 사람]과 대화할 수 있습니다.</string>
    <string name="rule_2">시간이 흐를수록 대화의 제약이 풀려갑니다.\n[첫째 날엔 대화를, 둘째 날엔 사진을, 셋째 날엔 음성을 전송]할 수 있습니다.</string>
    <string name="rule_3">[72시간의 대화 후] 프로필을 교환해 상대방을 확인해보세요. 당신의 정보는 프로필 교환 전까지 공개되지 않습니다.</string>
    <string name="rule_3_1">첫째날이 지나면 사진을. 둘째날이 지나면 음성을 전송할 수 있습니다. 3일이 지나면 내 프로필을 교환할 수 있습니다.</string>
    <string name="rule_4">프로필을 교환한 상대는 이제 추억을 쌓은 친구가 되었습니다. 대화 테이블에서 친구와 자유롭게 대화하세요.</string>
    <string name="agreement_title">안전한 대화를 위해\n저희와 약속해주세요</string>
    <string name="agreement_1">상대방의 비밀을 지켜주세요!</string>
    <string name="agreement_sub_1">대화 상대에게 개인정보 및 만남 강요는 안됩니다.</string>
    <string name="agreement_2">모두가 성적 농담을 즐기는 건 아닙니다!</string>
    <string name="agreement_sub_2">성추행 및 성희롱 등의 발언은 삼가해주세요.</string>
    <string name="agreement_3">화내기 전 한번만 더 생각해주세요!</string>
    <string name="agreement_sub_3">욕설 및 비하발언은 삼가주세요</string>
    <string name="agreement_4">부드럽게, 매너있는 대회해주세요!</string>
    <string name="agreement_sub_4">즐겁게 대화해주세요</string>
    <string name="agreement_next">동의 후 계속하기</string>
    <string name="agreement_toast_alert_select_all">모두 동의해주세요.</string>
    <string name="login_toast_error">로그인에 실패했습니다.</string>
    <string name="profile_setting_title">프로필 설정</string>
    <string name="profile_setting_step_1">1/3 단계</string>
    <string name="profile_setting_step_2">2/3 단계</string>
    <string name="profile_setting_step_3">3/3 단계</string>
    <string name="profile_setting_age_sex">성별과 나이를\n알려주세요.</string>
    <string name="profile_setting_age_hint">나이</string>
    <string name="profile_setting_sex">성별</string>
    <string name="profile_setting_alert_age">만 18세 이하는 사용이 불가능합니다.</string>
    <string name="profile_setting_alert_age_sex">나이와 성별은 수정이 불가능하니 신중하게 입력해주세요.</string>
    <string name="profile_setting_next">다음</string>
    <string name="profile_setting_nickname">이제부터 손님을 어떻게\n불러드릴까요?</string>
    <string name="profile_setting_nickname_rule_1">1자~10자</string>
    <string name="profile_setting_nickname_rule_2">로 구성해주세요.</string>
    <string name="profile_setting_matching_sex">원하시는 합석 손님이 있을까요?</string>
    <string name="profile_setting_interest_title">3개의 관심사를 골라주세요</string>
    <string name="profile_setting_interest_sub_title">꼼꼼하게 체크할 수록 나와 잘 맞는 상대를 만날 수 있습니다.</string>
    <string name="interest_toast_up_to_3">최대 3개까지만 선택 가능합니다</string>
    <string name="profile_setting_partner_sex">대화상대 성별을\n선택해주세요.</string>
    <string name="profile_setting_toast_input_correct_age">미성년자는 사용이 불가능합니다.</string>
    <string name="profile_setting_toast_input_age">나이를 먼저 입력해주세요</string>
    <string name="profile_setting_toast_input_number">나이로는 숫자만 입력해주세요.</string>
    <string name="profile_setting_toast_input_sex">성별을 먼저 선택해주세요</string>
    <string name="profile_setting_toast_input_nickname">닉네임을 먼저 설정해주세요</string>
    <string name="profile_setting_toast_nickname_constraint">닉네임은 10자 미만으로 입력해주세요.</string>
    <string name="profile_setting_toast_select_interest">3가지의 관심사를 선택해주세요.</string>
    <string name="profile_setting_toast_select_sub_interest">1개 이상을 선택해주세요</string>
    <string name="signin_title">회원가입 완료</string>
    <string name="signin_subtitle">회원가입이 완료되었습니다.\n블라인드 카페 입장 도와드릴게요.</string>
    <string name="signin_next">홈으로 가기</string>
    <string name="chat_room_menu_report">유저 신고하기</string>
    <string name="chat_room_menu_notification">알람 끄기</string>
    <string name="chat_room_menu_quit">채팅방 나가기</string>
    <string name="chat_et_hint">메시지 작성하기</string>
    <string name="chat_toast_permission">권한을 허용해주셔야 사용하실 수 있습니다</string>
    <string name="chat_recorder_initial_time">00:00</string>
    <string name="chat_topic_text_title">상대와 공통 관심사에 대해서 이야기를 나눠보세요</string>
    <string name="chat_topic_audio_title">어떤 소리인지 같이 맞춰보세요</string>
    <string name="chat_topic_image_title">어떤 사진인지 같이 맞춰보세요</string>
    <string name="chat_topic_fold">다신 보지 않기</string>
    <string name="chat_common_interest">%s님과 %s님의 공통 관심사는 %s 입니다.</string>
    <string name="chat_congrats">축하드립니다! 3일간의 대화가 즐거우셨군요. 이 대화방은 지금부터 7일간 유지됩니다.</string>
    <string name="chat_get_badge">프로필 교환 성공으로[%s]뱃지를 획득하셨습니다. 이제 홈에서 새로운 매칭이 가능합니다.</string>
    <string name="chat_enable_24_hours_later">사진전송은 24시간 후에 사용 가능합니다.</string>
    <string name="chat_enable_48_hours_later">음성전송은 48시간 후에 사용 가능합니다.</string>
    <string name="chat_record_limit">음성메시지는 최대 60초까지만 가능합니다.</string>
    <string name="chat_matched_profile_no_image">프로필 사진이 없습니다.</string>
    <string name="gallery_title">갤러리</string>
    <string name="gallery_send">보내기</string>
    <string name="home_title_none">매칭하러 가기</string>
    <string name="home_subtitle_none">버튼을 눌러 매칭상대를 만나보세요</string>
    <string name="home_subtitle_wait">상대방을 찾고 있습니다.\n잠시만 기다려주세요.</string>
    <string name="home_title_matching">대화하기</string>
    <string name="home_subtitle_matching">하트를 눌러 상대방과 대화를 시작하세요</string>
    <string name="home_title_found">대화하기</string>
    <string name="home_subtitle_found">하트를 눌러 상대방과 대화를 시작하세요</string>
    <string name="home_matching_cancel_title">정말 매칭을 취소하시겠습니까?</string>
    <string name="home_matching_cancel_subtitle">지금 취소하면 더 오래 기다려야 합니다.</string>
    <string name="home_matching_cancel_no">아니요</string>
    <string name="home_matching_cancel_yes">매칭 취소</string>
    <string name="home_notification_message">%d건의 메시지가 도착했습니다.</string>
    <string name="matching_error">상대 계정이 유효하지 않습니다. 다시 요청해주세요</string>
    <string name="home_not_read_cnt_none">읽지 않은 메시지가 없습니다.</string>
    <string name="chat_list_title">친구와의 테이블</string>
    <string name="chat_list_title_none">아직 추억을 쌓은 친구가 없어요</string>
    <string name="chat_list_subtitle_none">프로필 교환을 완료한 상대방과 대화를 할 수 있는 공간입니다.\n이 방에선 여러 명과 대화할 수 있어요</string>
    <string name="my_page_title">마이페이지</string>
    <string name="my_page_profile_message">사진 도용은 엄격히 금합니다.</string>
    <string name="my_page_sex">성별</string>
    <string name="my_page_male">남자</string>
    <string name="my_page_female">여자</string>
    <string name="my_page_age">나이</string>
    <string name="my_page_age_unit">세</string>
    <string name="my_page_location">지역</string>
    <string name="my_page_profile_edit">프로필 수정</string>
    <string name="my_page_interest">관심사</string>
    <string name="my_page_interest_edit">수정</string>
    <string name="my_page_badge_title">내가 모은 음료 뱃지</string>
    <string name="my_page_badge_subtitle">9가지의 뱃지를 모은 후 선물을 받아가세요</string>
    <string name="coffee_order_title">메뉴 주문하기</string>
    <string name="coffee_order_subtitle">Blind Cafe menu</string>
    <string name="coffee_order_description">누군가 %s님과 함석하고 싶어해요 음료수를 고르시면 테이블로 안내해드릴게요</string>
    <string name="coffee_order_next_alert">음료를 먼저 선택해주세요</string>
    <string name="quit_reason_title">매칭 방을 나가시는 이유를 하나 이상 선택해주세요</string>
    <string name="quit_reason_subtitle">의 선택 사항은 해당 유저에게 전달됩니다.</string>
    <string name="quit_reason_1">상대방과 연락이 잘 안돼요</string>
    <string name="quit_reason_2">대화가 불쾌했어요 (성적, 종교적 등)</string>
    <string name="quit_reason_3">대화가 재미없어요</string>
    <string name="quit_reason_4">제가 대화를 지속하기 어려워요</string>
    <string name="quit_reason_no">안나갈래요</string>
    <string name="quit_reason_yes">이젠 안녕!</string>
    <string name="quit_confirm_title">정말 매칭 방을 나가시겠습니까?</string>
    <string name="quit_confirm_subtitle">지금 나가시면 %s님과 다시 매칭 될 수 없어요</string>
    <string name="quit_confirm_no">취소</string>
    <string name="quit_confirm_yes">나가기</string>
    <string name="exit_complete_title">%s 님과 %d일간의 추억은 즐거우셨나요?\n이제 더 좋은 추억을 쌓으러 가보죠!</string>
    <string name="exit_reported_title">%s님의 불편함을 느낀 대화를 종료했습니다.\n아쉽지만 새로운 손님과 또 다른 추억을 쌓으러 가볼까요?</string>
    <string name="exit_completed_title">%s님이[\"%s\"]라는 이유로 대화를 진행하지 못하게되었습니다.\n\n아쉽지만 새로운 손님과 또 다른 추억을 쌓을 수 있습니다.</string>
    <string name="exit_complete_next">새로운 손님과 합석하기</string>
    <string name="report_reason_title">신고</string>
    <string name="report_reason_subtitle">신고사유를 체크해주시면 확인 후 운영진에서 해당유저를 제제하겠습니다. 회원님의 신고는 익명으로 처리됩니다.</string>
    <string name="report_reason_1">욕설, 모욕등의 불쾌한 발언</string>
    <string name="report_reason_2">과도한 성적 발언</string>
    <string name="report_reason_3">개인정보 요구 및 만남 강요</string>
    <string name="report_reason_4">미성년자</string>
    <string name="report_reason_5">도배성 메시지</string>
    <string name="report_reason_email">적절한 신고 선택지가 없으실 땐 저희에게 언제든지 연락주세요 (blindcafeapp@gmail.com)</string>
    <string name="report_reason_no">취소</string>
    <string name="report_reason_yes">신고하기</string>
    <string name="report_confirm_title">신고가 접수 되었습니다.</string>
    <string name="report_confirm_subtitle">불쾌한 경험을 알겨드려 죄송합니다.\n보내주신 피드백으로 안전한 대화공간을 만들 수 있도록 노력하겠습니다.</string>
    <string name="report_confirm_no">취소</string>
    <string name="report_confirm_yes">나가기</string>
    <string name="profile_edit_title">프로필 수정</string>
    <string name="profile_edit_image_title">프로필 등록하기</string>
    <string name="profile_edit_nickname_title">닉네임</string>
    <string name="profile_edit_age_title">나이</string>
    <string name="profile_edit_sex_title">성별</string>
    <string name="profile_edit_location_title">지역</string>
    <string name="profile_edit_partner_sex_title">대화 상대 성별</string>
    <string name="profile_edit_nickname_hint">닉네임을 설정해주세요.</string>
    <string name="profile_edit_age_hint">나이를 설정해주세요.</string>
    <string name="profile_edit_sex_hint">성별을 설정해주세요.</string>
    <string name="profile_edit_location_hint">지역을 설정해주세요.</string>
    <string name="profile_edit_impossible">수정이 불가능합니다.</string>
    <string name="profile_edit_complete">수정하기</string>
    <string name="profile_edit_open">공개하기</string>
    <string name="profile_image_edit_complete">확인</string>
    <string name="profile_image_edit_toast_alert_at_least_one">1장 이상의 프로필 사진을 등록해주세요.</string>
    <string name="profile_edit_toast_alert_fill_all">프로필을 모두 작성해야 공개할 수 있습니다.</string>
    <string name="profile_exchange_title">매칭테이블</string>
    <string name="profile_exchange_subtitle_1">72시간의 대화가 종료되었습니다.\n그 동안 %s님과의 만남이 즐거우셨나요?</string>
    <string name="profile_exchange_subtitle_2">내 프로필을 멋지게 채우고 %s님의 프로필을 받아보세요!</string>
    <string name="profile_exchange_make_profile">프로필 작성하기</string>
    <string name="profile_exchange_location">지역 설정</string>
    <string name="profile_exchange_next">프로필 작성하기</string>
    <string name="profile_exchange_dismiss">거절하기</string>
    <string name="profile_exchange_accept">수락하기</string>
</resources>