<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View.OnClickListener" />

        <import type="android.view.View" />

        <import type="androidx.core.content.ContextCompat" />

        <import type="java.util.List" />

        <variable
            name="viewModel"
            type="com.abouttime.blindcafe.presentation.chat.report.reason.ReportReasonViewModel" />
    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/bg_rounding_3dp"
        android:backgroundTint="@color/gray_900"
        android:orientation="vertical"
        android:paddingHorizontal="18dp"
        android:paddingTop="30dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/spoqa_han_sans_neo_bold"
            android:text="@string/report_reason_title"
            android:textColor="@color/white"
            android:textSize="@dimen/dialog_title" />

        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/spoqa_han_sans_neo_regular"
            android:text="@string/report_reason_subtitle"
            android:textColor="@color/gray_300"
            android:textSize="@dimen/font_size_small" />


        <LinearLayout
            android:id="@+id/ll_reason_container_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tv_reason_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/spoqa_han_sans_neo_regular"
                android:gravity="center_vertical"
                android:text="@string/report_reason_1"
                android:textColor="@color/white"
                android:textSize="@dimen/dialog_reason" />

            <ImageView
                android:id="@+id/iv_check_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{viewModel::onClickCheckButton}"
                android:src="@{viewModel.reason == 1 ? @drawable/bt_checked : @drawable/bt_check}" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_reason_container_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tv_reason_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/spoqa_han_sans_neo_regular"
                android:gravity="center_vertical"
                android:text="@string/report_reason_2"
                android:textColor="@color/white"
                android:textSize="@dimen/dialog_reason" />

            <ImageView
                android:id="@+id/iv_check_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{viewModel::onClickCheckButton}"
                android:src="@{viewModel.reason == 2 ? @drawable/bt_checked : @drawable/bt_check}" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_reason_container_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tv_reason_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/spoqa_han_sans_neo_regular"
                android:gravity="center_vertical"
                android:text="@string/report_reason_3"
                android:textColor="@color/white"
                android:textSize="@dimen/dialog_reason" />

            <ImageView
                android:id="@+id/iv_check_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{viewModel::onClickCheckButton}"
                android:src="@{viewModel.reason == 3 ? @drawable/bt_checked : @drawable/bt_check}" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_reason_container_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tv_reason_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/spoqa_han_sans_neo_regular"
                android:gravity="center_vertical"
                android:text="@string/report_reason_4"
                android:textColor="@color/white"
                android:textSize="@dimen/dialog_reason" />

            <ImageView
                android:id="@+id/iv_check_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{viewModel::onClickCheckButton}"
                android:src="@{viewModel.reason == 4 ? @drawable/bt_checked : @drawable/bt_check}" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_reason_container_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tv_reason_5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/spoqa_han_sans_neo_regular"
                android:gravity="center_vertical"
                android:text="@string/report_reason_5"
                android:textColor="@color/white"
                android:textSize="@dimen/dialog_reason" />

            <ImageView
                android:id="@+id/iv_check_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{viewModel::onClickCheckButton}"
                android:src="@{viewModel.reason == 5 ? @drawable/bt_checked : @drawable/bt_check}" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/spoqa_han_sans_neo_regular"
            android:lineSpacingExtra="6sp"
            android:text="@string/report_reason_email"
            android:textColor="@color/gray_300"
            android:textSize="@dimen/font_size_super_small" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="@color/steel" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="13dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/spoqa_han_sans_neo_regular"
                android:gravity="center"
                android:onClick="@{() -> viewModel.onClickNoButton()}"
                android:paddingVertical="12dp"
                android:text="@string/report_reason_no"
                android:textColor="@color/gray_300"
                android:textSize="@dimen/dialog_title" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/spoqa_han_sans_neo_regular"
                android:gravity="center"
                android:onClick="@{() -> viewModel.onClickYesButton()}"
                android:paddingVertical="12dp"
                android:text="@string/report_reason_yes"
                android:textColor="@color/main"
                android:textSize="@dimen/dialog_title" />


        </LinearLayout>


    </LinearLayout>

</layout>