<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View.OnClickListener" />

        <import type="android.view.View" />

        <import type="androidx.core.content.ContextCompat" />

        <import type="java.util.List" />

        <variable
            name="viewModel"
            type="com.abouttime.blindcafe.presentation.common.confirm.ConfirmViewModel" />
    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/bg_rounding_3dp"
        android:backgroundTint="@color/gray_900"
        android:orientation="vertical"
        android:paddingHorizontal="18dp"
        android:paddingTop="28dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/spoqa_han_sans_neo_bold"
            android:text="@string/report_confirm_title"
            android:textColor="@color/white"
            android:textSize="@dimen/dialog_reason" />

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/tv_subtitle"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/spoqa_han_sans_neo_regular"
            android:text="@string/report_confirm_subtitle"
            android:textColor="@color/gray_300"
            android:textSize="@dimen/font_size_13" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="27dp"
            android:background="@color/steel" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/tv_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/spoqa_han_sans_neo_regular"
                android:gravity="center"
                android:paddingTop="25dp"
                android:paddingBottom="25dp"
                android:text="@string/report_confirm_no"
                android:textColor="@color/gray_300"
                android:textSize="@dimen/dialog_reason" />

            <TextView
                android:id="@+id/tv_yes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/spoqa_han_sans_neo_regular"
                android:gravity="center"
                android:paddingVertical="25dp"
                android:text="@string/report_confirm_yes"
                android:textColor="@color/main"
                android:textSize="@dimen/dialog_reason" />


        </LinearLayout>

    </LinearLayout>

</layout>